Fixed it according to the solution

--- a/index.html
+++ b/index.html
@@ -17,10 +17,10 @@
     /*Yung blue bar sa gitna*/
     div > div {
       position: absolute;
-      margin-top: 50px;
+      top: 150px;
       background-color: rgb(0, 40, 104);
       height: 300px;
-      width: 900px;
+      width: 100%;
     }
     /* Sa white na butas*/
     div > div > div { 
@@ -29,8 +29,8 @@
       width: 200px;
       border-radius: 100px;
       position: absolute;
-      margin-top: 50px;
-      margin-left:350px;
+      top: 50px;
+      left:350px;
     }
 
     div > p {
